Add CLI commands for notes, reminders, interactions

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -43,8 +43,9 @@ Validated against the current working tree (main + ahead 4). Status meanings:
   (`affinity/services/lists.py`).
 - **API-007**: **Implemented** — `AsyncListEntryService` now exposes write ops and field value helpers
   (`affinity/services/lists.py`).
-- **CLI-002/003/004/005**: **Valid** — no CLI modules for notes/reminders/webhooks/interactions
+- **CLI-002/003/005**: **Implemented** — CLI modules added for notes/reminders/interactions
   under `affinity/cli/commands/`.
+- **CLI-004**: **Valid** — webhook CLI commands intentionally omitted.
 - **DOC-001**: **Implemented** — `examples/basic_usage.py` updated to use `company.fields.data`.
 - **DOC-002**: **Implemented** — `examples/list_management.py` updated to use `entry.fields.data`.
 - **DOC-003**: **Implemented** — `examples/list_management.py` no longer references `filter_text`.
@@ -198,10 +199,20 @@ AsyncListEntryService now exposes:
 ### CLI-002: NoteService has no CLI commands
 **Auditor:** sdk-cli-consistency-auditor | **File:** affinity/cli/commands/
 
+**Status:** Implemented (2025-12-21)
+
+CLI now exposes:
+- `affinity note ls|get|create|update|delete`
+
 ---
 
 ### CLI-003: ReminderService has no CLI commands
 **Auditor:** sdk-cli-consistency-auditor | **File:** affinity/cli/commands/
+
+**Status:** Implemented (2025-12-21)
+
+CLI now exposes:
+- `affinity reminder ls|get|create|update|delete`
 
 ---
 
@@ -212,6 +223,11 @@ AsyncListEntryService now exposes:
 
 ### CLI-005: InteractionService has no CLI commands
 **Auditor:** sdk-cli-consistency-auditor | **File:** affinity/cli/commands/
+
+**Status:** Implemented (2025-12-21)
+
+CLI now exposes:
+- `affinity interaction ls|get|create|update|delete`
 
 ---
 
