Add CLI write/merge/field operations

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -55,8 +55,8 @@ Validated against the current working tree (main + ahead 4). Status meanings:
 - **TC-001**: **Valid** — no `@pytest.mark.req('FR-002')` found in `tests/`.
 - **TC-002–TC-005**: **Valid** — no async tests for v1-only services
   (`AsyncNoteService`, `AsyncReminderService`, `AsyncWebhookService`, `AsyncInteractionService`).
-- **CLI-006–CLI-014**: **Valid** — CLI only exposes search/get/ls/view; no create/update/delete/
-  merge/field/field_values/relationship_strength/task commands.
+- **CLI-006–CLI-014**: **Implemented** — CLI now exposes create/update/delete/merge plus
+  field/field-value/relationship-strength/task commands (see `affinity/cli/commands/`).
 - **ERR-007**: **Valid** — `model_validate()` calls in list services are not wrapped
   (`affinity/services/lists.py:184`).
 - **DEP-001/DEP-002**: **Valid** — `pyproject.toml` still has lower bounds only for httpx/pydantic.
@@ -290,15 +290,25 @@ These async V1-only services lack dedicated test coverage.
 ### CLI-006 through CLI-014: SDK operations not exposed via CLI
 **Auditor:** sdk-cli-consistency-auditor
 
-- PersonService.create/update/delete not exposed
-- CompanyService.create/update/delete not exposed
-- ListService.create not exposed
-- ListEntryService write operations not exposed
-- PersonService.merge/get_merge_status not exposed
-- CompanyService.merge/get_merge_status not exposed
-- FieldService and FieldValueService have no CLI commands
-- RelationshipStrengthService has no CLI commands
-- TaskService has no CLI commands
+**Status:** Implemented (2025-12-21)
+
+- PersonService create/update/delete/merge now exposed via `affinity person ...`
+- CompanyService create/update/delete/merge now exposed via `affinity company ...`
+- ListService create now exposed via `affinity list create`
+- ListEntryService write ops now exposed via `affinity list entry add/delete/update-field/batch-update`
+- Field/FieldValue/RelationshipStrength/Task services now exposed via `affinity field`,
+  `affinity field-value`, `affinity relationship-strength`, and `affinity task`
+
+**Evidence:**
+- `affinity/cli/commands/person_cmds.py`
+- `affinity/cli/commands/company_cmds.py`
+- `affinity/cli/commands/list_cmds.py`
+- `affinity/cli/commands/field_cmds.py`
+- `affinity/cli/commands/field_value_cmds.py`
+- `affinity/cli/commands/relationship_strength_cmds.py`
+- `affinity/cli/commands/task_cmds.py`
+- `docs/public/cli/commands.md`
+- `tests/test_cli_write_ops.py`
 
 ---
 
