Wrap list response validation errors

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -57,8 +57,9 @@ Validated against the current working tree (main + ahead 4). Status meanings:
   (`AsyncNoteService`, `AsyncReminderService`, `AsyncWebhookService`, `AsyncInteractionService`).
 - **CLI-006–CLI-014**: **Implemented** — CLI now exposes create/update/delete/merge plus
   field/field-value/relationship-strength/task commands (see `affinity/cli/commands/`).
-- **ERR-007**: **Valid** — `model_validate()` calls in list services are not wrapped
-  (`affinity/services/lists.py:184`).
+- **ERR-007**: **Implemented** — list service response parsing now wraps
+  `model_validate()` to raise `AffinityError` on invalid API payloads
+  (`affinity/services/lists.py`).
 - **DEP-001/DEP-002**: **Valid** — `pyproject.toml` still has lower bounds only for httpx/pydantic.
 - **DOC-005**: **Valid** — `docs/public/guides/sync-vs-async.md` parity table still omits rate_limits.
 
@@ -315,7 +316,11 @@ These async V1-only services lack dedicated test coverage.
 ### ERR-007: Pydantic ValidationError from model_validate not wrapped
 **Auditor:** error-handling-auditor | **File:** affinity/services/lists.py:184
 
-Service methods call model_validate() on API responses without try/except handling. Raw pydantic.ValidationError may propagate to users.
+**Status:** Implemented (2025-12-21)
+
+List service response parsing now uses `_safe_model_validate(...)` to catch
+Pydantic validation errors and raise `AffinityError` instead of leaking raw
+exceptions to callers.
 
 ---
 
