Validate webhook sent_at timestamps

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -70,7 +70,8 @@ Validated against the current working tree (main + ahead 4). Status meanings:
   rate_limit/auth services.
 - **CLI-015–CLI-018**: **Valid** — no CLI list commands for person/company; upload commands still
   missing for entity files; search params still not exposed.
-- **SEC-002**: **Valid** — webhook sent_at validation still absent (`affinity/inbound_webhooks.py:171`).
+- **SEC-002**: **Implemented** — webhook sent_at validation added with replay window
+  checks (`affinity/inbound_webhooks.py`).
 - **ERR-004**: **Valid** — no thundering herd prevention for rate limits
   (`affinity/clients/http.py:784`).
 - **DEP-003**: **Valid** — `rich` dependency still uses lower bound only (`pyproject.toml:54`).
@@ -372,7 +373,10 @@ AsyncFieldService, AsyncFieldValueService, AsyncRelationshipStrengthService, Asy
 ### SEC-002: Webhook parser does not validate sent_at timestamp
 **Auditor:** security-auditor | **File:** affinity/inbound_webhooks.py:171
 
-No validation for replay protection.
+**Status:** Implemented (2025-12-21)
+
+Webhook parsing now validates `sent_at` against a replay window and future skew
+to prevent stale or suspicious payloads.
 
 ---
 
