--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -53,7 +53,7 @@ Validated against the current working tree (main + ahead 4). Status meanings:
 
 ### Medium
 - **TC-001**: **Valid** — no `@pytest.mark.req('FR-002')` found in `tests/`.
-- **TC-002–TC-005**: **Valid** — no async tests for v1-only services
+- **TC-002–TC-005**: **Implemented** — async tests added for v1-only services
   (`AsyncNoteService`, `AsyncReminderService`, `AsyncWebhookService`, `AsyncInteractionService`).
 - **CLI-006–CLI-014**: **Implemented** — CLI now exposes create/update/delete/merge plus
   field/field-value/relationship-strength/task commands (see `affinity/cli/commands/`).
@@ -66,8 +66,8 @@ Validated against the current working tree (main + ahead 4). Status meanings:
 ### Low
 - **API-013**: **Valid** — AsyncEntityFileService.download() has `deadline_seconds` mismatch
   (`affinity/services/v1_only.py:1566+`).
-- **TC-006–TC-010**: **Valid** — async tests missing for field/field_values/relationship_strength/
-  rate_limit/auth services.
+- **TC-006–TC-010**: **Implemented** — async tests added for field/field_values/
+  relationship_strength/rate_limit/auth services.
 - **CLI-015–CLI-018**: **Valid** — no CLI list commands for person/company; upload commands still
   missing for entity files; search params still not exposed.
 - **SEC-002**: **Implemented** — webhook sent_at validation added with replay window
@@ -285,7 +285,12 @@ Requirement FR-002 specifies V2-First Architecture principles, but no test is ex
 ### TC-002 through TC-005: AsyncNoteService, AsyncReminderService, AsyncWebhookService, AsyncInteractionService have no dedicated tests
 **Auditor:** test-coverage-auditor | **Files:** affinity/services/v1_only.py
 
-These async V1-only services lack dedicated test coverage.
+**Status:** Implemented (2025-12-21)
+
+Async service tests cover list/get/create/update/delete flows for notes, reminders,
+webhooks, and interactions.
+
+**Evidence:** `tests/test_services_v1_only_async.py`
 
 ---
 
@@ -356,7 +361,12 @@ Minor parameter inconsistency between sync and async versions.
 ### TC-006 through TC-010: More async services without tests
 **Auditor:** test-coverage-auditor
 
-AsyncFieldService, AsyncFieldValueService, AsyncRelationshipStrengthService, AsyncRateLimitService, AsyncAuthService lack dedicated tests.
+**Status:** Implemented (2025-12-21)
+
+Async service tests cover field/field-values, relationship-strength, rate-limit,
+and auth surfaces.
+
+**Evidence:** `tests/test_services_v1_only_async.py`
 
 ---
 
