Cap dependency upper bounds

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -60,7 +60,7 @@ Validated against the current working tree (main + ahead 4). Status meanings:
 - **ERR-007**: **Implemented** — list service response parsing now wraps
   `model_validate()` to raise `AffinityError` on invalid API payloads
   (`affinity/services/lists.py`).
-- **DEP-001/DEP-002**: **Valid** — `pyproject.toml` still has lower bounds only for httpx/pydantic.
+- **DEP-001/DEP-002**: **Implemented** — `pyproject.toml` now caps httpx/pydantic upper bounds.
 - **DOC-005**: **Valid** — `docs/public/guides/sync-vs-async.md` parity table still omits rate_limits.
 
 ### Low
@@ -74,7 +74,7 @@ Validated against the current working tree (main + ahead 4). Status meanings:
   checks (`affinity/inbound_webhooks.py`).
 - **ERR-004**: **Valid** — no thundering herd prevention for rate limits
   (`affinity/clients/http.py:784`).
-- **DEP-003**: **Valid** — `rich` dependency still uses lower bound only (`pyproject.toml:54`).
+- **DEP-003**: **Implemented** — `rich` dependency now capped with an upper bound.
 - **DOC-006/DOC-007**: **Valid** — README still prints FieldValues repr in examples
   (`README.md:100, 176`).
 
@@ -333,14 +333,18 @@ exceptions to callers.
 ### DEP-001: Missing upper bound on httpx version
 **Auditor:** dependency-health-auditor | **File:** pyproject.toml:40
 
-The httpx dependency uses only a lower bound constraint (>=0.25.0) with no upper bound.
+**Status:** Implemented (2025-12-21)
+
+`httpx` now capped with an upper bound (`<1.0.0`).
 
 ---
 
 ### DEP-002: Missing upper bound on pydantic version
 **Auditor:** dependency-health-auditor | **File:** pyproject.toml:41
 
-The pydantic dependency uses only a lower bound constraint (>=2.8.0) with no upper bound.
+**Status:** Implemented (2025-12-21)
+
+`pydantic` now capped with an upper bound (`<3.0.0`).
 
 ---
 
@@ -399,6 +403,10 @@ Enhancement opportunity for concurrent request handling.
 
 ### DEP-003: Vague version constraints for rich
 **Auditor:** dependency-health-auditor | **File:** pyproject.toml:54
+
+**Status:** Implemented (2025-12-21)
+
+`rich` now capped with an upper bound (`<14`).
 
 ---
 
