Document rate_limits parity

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -61,7 +61,7 @@ Validated against the current working tree (main + ahead 4). Status meanings:
   `model_validate()` to raise `AffinityError` on invalid API payloads
   (`affinity/services/lists.py`).
 - **DEP-001/DEP-002**: **Implemented** — `pyproject.toml` now caps httpx/pydantic upper bounds.
-- **DOC-005**: **Valid** — `docs/public/guides/sync-vs-async.md` parity table still omits rate_limits.
+- **DOC-005**: **Implemented** — `docs/public/guides/sync-vs-async.md` parity table now includes rate_limits.
 
 ### Low
 - **API-013**: **Valid** — AsyncEntityFileService.download() has `deadline_seconds` mismatch
@@ -350,6 +350,8 @@ exceptions to callers.
 
 ### DOC-005: sync-vs-async.md parity table missing rate_limits service
 **Auditor:** documentation-auditor | **File:** docs/public/guides/sync-vs-async.md:32
+
+**Status:** Implemented (2025-12-21)
 
 ---
 
