Add rate limit herd protection

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -72,8 +72,8 @@ Validated against the current working tree (main + ahead 4). Status meanings:
   missing for entity files; search params still not exposed.
 - **SEC-002**: **Implemented** — webhook sent_at validation added with replay window
   checks (`affinity/inbound_webhooks.py`).
-- **ERR-004**: **Valid** — no thundering herd prevention for rate limits
-  (`affinity/clients/http.py:784`).
+- **ERR-004**: **Implemented** — added rate-limit gating to avoid herd retries
+  (`affinity/clients/http.py`).
 - **DEP-003**: **Implemented** — `rich` dependency now capped with an upper bound.
 - **DOC-006/DOC-007**: **Valid** — README still prints FieldValues repr in examples
   (`README.md:100, 176`).
@@ -399,7 +399,10 @@ to prevent stale or suspicious payloads.
 ### ERR-004: No thundering herd prevention for rate-limited requests
 **Auditor:** error-handling-auditor | **File:** affinity/clients/http.py:784
 
-Enhancement opportunity for concurrent request handling.
+**Status:** Implemented (2025-12-21)
+
+Requests now respect a shared rate-limit gate before sending, and 429 responses
+set the gate to stagger subsequent retries.
 
 ---
 
