Fix sync entity file download deadline_seconds

--- a/docs/internal/audit-2025-12-20-235436.md
+++ b/docs/internal/audit-2025-12-20-235436.md
@@ -64,8 +64,8 @@ Validated against the current working tree (main + ahead 4). Status meanings:
 - **DOC-005**: **Implemented** — `docs/public/guides/sync-vs-async.md` parity table now includes rate_limits.
 
 ### Low
-- **API-013**: **Valid** — AsyncEntityFileService.download() has `deadline_seconds` mismatch
-  (`affinity/services/v1_only.py:1566+`).
+- **API-013**: **Implemented** — sync EntityFileService.download now supports
+  `deadline_seconds` (`affinity/services/v1_only.py`, `affinity/clients/http.py`).
 - **TC-006–TC-010**: **Implemented** — async tests added for field/field_values/
   relationship_strength/rate_limit/auth services.
 - **CLI-015–CLI-018**: **Valid** — no CLI list commands for person/company; upload commands still
@@ -360,7 +360,10 @@ exceptions to callers.
 ### API-013: AsyncEntityFileService.download() has deadline_seconds param, sync version does not
 **Auditor:** api-parity-auditor | **File:** affinity/services/v1_only.py:1635
 
-Minor parameter inconsistency between sync and async versions.
+**Status:** Implemented (2025-12-22)
+
+Sync EntityFileService.download now accepts `deadline_seconds` and forwards it to
+HTTPClient.download_file, matching async behavior.
 
 ---
 
